--- a/OnlineJudge/accounts/templates/auth/change_password.html
+++ b/OnlineJudge/accounts/templates/auth/change_password.html
@@ -23,7 +23,7 @@
             <br>
         {% endfor %}
 
-        <button type="submit">Update Password</button>
+        <button class="btn-primary" type="submit">Update Password</button>
     </form>
 
     <p class="login-link"><a href="{% url 'profile' %}">Back to Profile</a></p>
