--- a/OnlineJudge/accounts/templates/auth/login.html
+++ b/OnlineJudge/accounts/templates/auth/login.html
@@ -23,7 +23,7 @@
             <br>
         {% endfor %}
 
-        <button type="submit">Login</button>
+        <button class="btn-primary" type="submit">Login</button>
     </form>
 
     <p class="login-link">Don't have an account? <a href="{% url 'register' %}">Register here</a>.</p>
