--- a/OnlineJudge/accounts/templates/auth/password_reset_confirm.html
+++ b/OnlineJudge/accounts/templates/auth/password_reset_confirm.html
@@ -24,7 +24,7 @@
                 <br>
             {% endfor %}
 
-            <button type="submit">Set New Password</button>
+            <button type="submit" class="btn-primary">Set New Password</button>
         </form>
     {% else %}
         <p class="errorlist">The password reset link is invalid or has expired.</p>
