--- a/OnlineJudge/accounts/templates/auth/register.html
+++ b/OnlineJudge/accounts/templates/auth/register.html
@@ -23,7 +23,7 @@
             <br>
         {% endfor %}
 
-        <button type="submit">Register</button>
+        <button class="btn-primary" type="submit">Register</button>
     </form>
 
     <p class="login-link">Already have an account? <a href="{% url 'login' %}">Login here</a>.</p>
