--- a/OnlineJudge/accounts/templates/auth/password_reset.html
+++ b/OnlineJudge/accounts/templates/auth/password_reset.html
@@ -23,7 +23,7 @@
             <br>
         {% endfor %}
 
-        <button type="submit">Send Reset Link</button>
+        <button type="submit" class="btn-primary">Send Reset Link</button>
     </form>
 
     <p class="login-link"><a href="{% url 'login' %}">Back to Login</a></p>
