--- a/OnlineJudge/problems/static/problems/css/problem_detail.css
+++ b/OnlineJudge/problems/static/problems/css/problem_detail.css
@@ -19,9 +19,9 @@
 .problem-right {
   display: flex;
   flex-direction: column;
-  background-color: #def9f8;
+  background-color: #d4fff8;
   border-radius: 12px;
-  padding: 20px;
+  padding: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   height: 100%;
 }
@@ -41,7 +41,7 @@
   font-size: 14px;
   border: 1px solid #ccc;
   border-radius: 8px;
-  height: 200px;
+  height: 40vh;
 }
 
 .editor-buttons {
