--- a/OnlineJudge/home/templates/navbar.html
+++ b/OnlineJudge/home/templates/navbar.html
@@ -44,7 +44,7 @@
       <li
         class="nav-item {% if request.path == '/profile/' %}active{% endif %}"
       >
-        <a class="nav-link" href="#">Profile</a>
+        <a class="nav-link" href="{% url 'profile' %}">Profile</a>
       </li>
     </ul>
 
