--- a/OnlineJudge/home/templates/base1.html
+++ b/OnlineJudge/home/templates/base1.html
@@ -15,6 +15,11 @@
       rel="stylesheet"
     />
 
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+
     <!-- CodeMirror Core CSS -->
     <link
       rel="stylesheet"
