--- a/OnlineJudge/accounts/templates/auth/login.html
+++ b/OnlineJudge/accounts/templates/auth/login.html
@@ -1,31 +1,35 @@
-{% extends 'base.html' %}
-
-{% block title %}Login{% endblock %}
-
-{% block header %}Login to Your Account{% endblock %}
-
+{% extends 'base.html' %} {% load static %} {% block title %}Login{% endblock %}
 {% block content %}
-    <form method="POST" novalidate>
-        {% csrf_token %}
-        {{ form.non_field_errors }}
-        {% for field in form %}
-            <div>
-                <label for="{{ field.id_for_label }}">{{ field.label }}</label><br>
-                {{ field }}
-                {% if field.errors %}
-                    <ul class="errorlist">
-                        {% for error in field.errors %}
-                            <li>{{ error }}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
-            </div>
-            <br>
-        {% endfor %}
+<div style="text-align: center; margin-bottom: 20px">
+  <img
+    src="{% static 'images/ByteBench.png' %}"
+    alt="ByteBench Logo"
+    style="max-width: 150px; height: auto"
+  />
+  <h2 style="margin-top: 10px; color: var(--text-color)">
+    Login to Your Account
+  </h2>
+</div>
 
-        <button class="btn-primary" type="submit">Login</button>
-    </form>
+<form method="POST" novalidate style="margin-top: 20px">
+  {% csrf_token %} {{ form.non_field_errors }} {% for field in form %}
+  <div>
+    <label for="{{ field.id_for_label }}">{{ field.label }}</label><br />
+    {{ field }} {% if field.errors %}
+    <ul class="errorlist">
+      {% for error in field.errors %}
+      <li>{{ error }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+  </div>
+  <br />
+  {% endfor %}
 
-    <p class="login-link">Don't have an account? <a href="{% url 'register' %}">Register here</a>.</p>
-    <p class="login-link"><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
+  <button class="btn-primary" type="submit">Login</button>
+</form>
+
+<p class="login-link" style="margin-top: 15px; text-align: center">
+  Don't have an account? <a href="{% url 'register' %}">Register here</a>.
+</p>
 {% endblock %}
