--- a/OnlineJudge/accounts/templates/auth/register.html
+++ b/OnlineJudge/accounts/templates/auth/register.html
@@ -1,30 +1,31 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% load static %} {% block title %}Register{% endblock %} {% block header %}Create an Account{% endblock %} {% block content %}
+<div style="text-align: center; margin-bottom: 20px">
+  <img
+    src="{% static 'images/ByteBench.png' %}"
+    alt="ByteBench Logo"
+    style="max-width: 150px; height: auto"
+  />
+  <h2 style="margin-top: 10px; color: var(--text-color)">Register here</h2>
+</div>
+<form method="POST" novalidate>
+  {% csrf_token %} {{ form.non_field_errors }} {% for field in form %}
+  <div>
+    <label for="{{ field.id_for_label }}">{{ field.label }}</label><br />
+    {{ field }} {% if field.errors %}
+    <ul class="errorlist">
+      {% for error in field.errors %}
+      <li>{{ error }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+  </div>
+  <br />
+  {% endfor %}
 
-{% block title %}Register{% endblock %}
+  <button class="btn-primary" type="submit">Register</button>
+</form>
 
-{% block header %}Create an Account{% endblock %}
-
-{% block content %}
-    <form method="POST" novalidate>
-        {% csrf_token %}
-        {{ form.non_field_errors }}
-        {% for field in form %}
-            <div>
-                <label for="{{ field.id_for_label }}">{{ field.label }}</label><br>
-                {{ field }}
-                {% if field.errors %}
-                    <ul class="errorlist">
-                        {% for error in field.errors %}
-                            <li>{{ error }}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
-            </div>
-            <br>
-        {% endfor %}
-
-        <button class="btn-primary" type="submit">Register</button>
-    </form>
-
-    <p class="login-link">Already have an account? <a href="{% url 'login' %}">Login here</a>.</p>
+<p class="login-link">
+  Already have an account? <a href="{% url 'login' %}">Login here</a>.
+</p>
 {% endblock %}
